Fix JDK compatible